# libprotection-cpp

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: BuildAntlr4Cpp.cmake  addTest.cmake  precompileCatch.cmake
include/: AntlrLanguageProvider.h  Formatter.h  LanguageProvider.h  LanguageService.h  Languages.h  Range.h  RegexLanguageProvider.h  RegexRule.h  RegexTokenDefinition.h  SafeString.h  Single.h  Token.h  TokenScope.h  TokenType.h
include/Languages/: FilePath.h  Html.h  JavaScript.h  Sql.h  Url.h
include/Support/: Format.h  WebUtils.h
include/protection/: AntlrLanguageProvider.h  FormatResult.h  Formatter.h  LanguageProvider.h  LanguageService.h  Languages.h  LibProtectionEngine.h  Range.h  RegexLanguageProvider.h  RegexRule.h  SafeString.h  Token.h
include/protection/Languages/: FilePath.h  Html.h  JavaScript.h  Sql.h  Url.h
include/support/: Format.h  WebUtils.h
lib/: CMakeLists.txt  FormatResult.cpp  LanguageService.cpp  LibProtectionEngine.cpp  Range.cpp
lib/Languages/: AntlrLanguageProvider.cpp  AntrlLanguageProvider.cpp  CMakeLists.txt  LanguageProvider.cpp  RegexLanguageProvider.cpp  RegexRule.cpp  RegexTokenDefinition.cpp  Token.cpp
lib/Languages/FilePath/: CMakeLists.txt  FilePath.cpp
lib/Languages/Html/: CMakeLists.txt  Html.cpp
lib/Languages/JavaScript/: CMakeLists.txt  JavaScript.cpp
lib/Languages/Sql/: CMakeLists.txt  Sql.cpp
lib/Languages/Url/: CMakeLists.txt  Url.cpp
lib/Support/: CMakeLists.txt  WebUtils.cpp
unittests/: CMakeLists.txt
unittests/Formats/: CMakeLists.txt  formats.test.cpp
unittests/SafeString/: CMakeLists.txt  safestring.test.cpp
unittests/Tokenization/: CMakeLists.txt  filepath.test.cpp  html.test.cpp  javascript.test.cpp  sql.test.cpp  tokenization.test.cpp  url.test.cpp
